{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 34,
  "lineage": "58ce0757-4842-fb79-4619-1d47f339330a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "manual_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a5e465d791bed879",
            "arn": "arn:aws:ec2:ap-east-1:619116435137:instance/i-06a261be8f01e88d6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a261be8f01e88d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01b7c8b2bea7ef742",
            "private_dns": "ip-10-0-1-30.ap-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.30",
            "public_dns": "ec2-18-163-208-74.ap-east-1.compute.amazonaws.com",
            "public_ip": "18.163.208.74",
            "region": "ap-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d63a67a616758d01",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0def58a906fc89f90",
            "tags": {
              "Name": "manual-vm"
            },
            "tags_all": {
              "Name": "manual-vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b782597dd9cae87d"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05ae90918b7392f01",
            "arn": "arn:aws:ec2:ap-east-1:619116435137:instance/i-0f1edf9b0f379a19a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1edf9b0f379a19a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "lesson14-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-031f9e90ad804aaaa",
            "private_dns": "ip-10-0-2-52.ap-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.52",
            "region": "ap-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02dac242a05ddab74",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a3d87a100d4d4bd",
            "tags": {
              "Name": "lesson14-private-vm"
            },
            "tags_all": {
              "Name": "lesson14-private-vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ecd90aa0568520d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.public_vm",
            "aws_key_pair.lesson_key",
            "aws_security_group.private_sg",
            "aws_security_group.public_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05ae90918b7392f01",
            "arn": "arn:aws:ec2:ap-east-1:619116435137:instance/i-01039a803f42b439d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01039a803f42b439d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "lesson14-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c1196dc9c414d97e",
            "private_dns": "ip-10-0-1-215.ap-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.215",
            "public_dns": "ec2-18-162-228-104.ap-east-1.compute.amazonaws.com",
            "public_ip": "18.162.228.104",
            "region": "ap-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-012d153ca69b6aeb3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0def58a906fc89f90",
            "tags": {
              "Name": "lesson14-public-vm"
            },
            "tags_all": {
              "Name": "lesson14-public-vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2e8085139b74033"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.lesson_key",
            "aws_security_group.public_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:619116435137:internet-gateway/igw-0e4b5bc09720822bd",
            "id": "igw-0e4b5bc09720822bd",
            "owner_id": "619116435137",
            "region": "ap-east-1",
            "tags": {
              "Name": "lesson14-igw"
            },
            "tags_all": {
              "Name": "lesson14-igw"
            },
            "vpc_id": "vpc-0cc7d838d294647aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:619116435137:route-table/rtb-0cf9ab26cdee115d3",
            "id": "rtb-0cf9ab26cdee115d3",
            "owner_id": "619116435137",
            "propagating_vgws": [],
            "region": "ap-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4b5bc09720822bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson14-public-rt"
            },
            "tags_all": {
              "Name": "lesson14-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc7d838d294647aa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0585f55e05e7ff9d6",
            "region": "ap-east-1",
            "route_table_id": "rtb-0cf9ab26cdee115d3",
            "subnet_id": "subnet-0def58a906fc89f90"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:619116435137:security-group/sg-05ecd90aa0568520d",
            "description": "Allow SSH and 8080 from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ecd90aa0568520d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App Port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lesson14-private-sg",
            "name_prefix": "",
            "owner_id": "619116435137",
            "region": "ap-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lesson14-private-sg"
            },
            "tags_all": {
              "Name": "lesson14-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc7d838d294647aa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:619116435137:security-group/sg-0a2e8085139b74033",
            "description": "Allow SSH and HTTP/S from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2e8085139b74033",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lesson14-public-sg",
            "name_prefix": "",
            "owner_id": "619116435137",
            "region": "ap-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lesson14-public-sg"
            },
            "tags_all": {
              "Name": "lesson14-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc7d838d294647aa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:619116435137:subnet/subnet-01a3d87a100d4d4bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a3d87a100d4d4bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619116435137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-east-1",
            "tags": {
              "Name": "lesson14-private-subnet"
            },
            "tags_all": {
              "Name": "lesson14-private-subnet"
            },
            "vpc_id": "vpc-0cc7d838d294647aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:619116435137:subnet/subnet-0def58a906fc89f90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0def58a906fc89f90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619116435137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-east-1",
            "tags": {
              "Name": "lesson14-public-subnet",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "lesson14-public-subnet",
              "Tier": "public"
            },
            "vpc_id": "vpc-0cc7d838d294647aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:619116435137:vpc/vpc-0cc7d838d294647aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad26fecf442abc59",
            "default_route_table_id": "rtb-06c42402a2aae142f",
            "default_security_group_id": "sg-0b782597dd9cae87d",
            "dhcp_options_id": "dopt-095932270c5815094",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc7d838d294647aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c42402a2aae142f",
            "owner_id": "619116435137",
            "region": "ap-east-1",
            "tags": {
              "Name": "lesson14-main-vpc"
            },
            "tags_all": {
              "Name": "lesson14-main-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.subnet_from_zone",
      "mode": "data",
      "type": "aws_subnet",
      "name": "each",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-01a3d87a100d4d4bd",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:619116435137:subnet/subnet-01a3d87a100d4d4bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a3d87a100d4d4bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619116435137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-east-1",
            "state": "available",
            "tags": {
              "Name": "lesson14-private-subnet"
            },
            "vpc_id": "vpc-0cc7d838d294647aa"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0def58a906fc89f90",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:619116435137:subnet/subnet-0def58a906fc89f90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0def58a906fc89f90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619116435137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-east-1",
            "state": "available",
            "tags": {
              "Name": "lesson14-public-subnet",
              "Tier": "public"
            },
            "vpc_id": "vpc-0cc7d838d294647aa"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.subnet_from_zone",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05ae90918b7392f01",
            "arn": "arn:aws:ec2:ap-east-1:619116435137:instance/i-03415dcfba54950cd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03415dcfba54950cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "lesson14-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04ac3ccbf1a699b4d",
            "private_dns": "ip-10-0-1-165.ap-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.165",
            "public_dns": "ec2-43-199-207-11.ap-east-1.compute.amazonaws.com",
            "public_ip": "43.199.207.11",
            "region": "ap-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c61547699c9be46d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0def58a906fc89f90",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b782597dd9cae87d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.lesson_key",
            "aws_vpc.main_vpc",
            "module.subnet_from_zone.data.aws_subnet.each",
            "module.subnet_info.data.aws_subnets.all"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_info",
      "mode": "data",
      "type": "aws_subnet",
      "name": "each",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-01a3d87a100d4d4bd",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:619116435137:subnet/subnet-01a3d87a100d4d4bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a3d87a100d4d4bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619116435137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-east-1",
            "state": "available",
            "tags": {
              "Name": "lesson14-private-subnet"
            },
            "vpc_id": "vpc-0cc7d838d294647aa"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0def58a906fc89f90",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:619116435137:subnet/subnet-0def58a906fc89f90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0def58a906fc89f90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619116435137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-east-1",
            "state": "available",
            "tags": {
              "Name": "lesson14-public-subnet",
              "Tier": "public"
            },
            "vpc_id": "vpc-0cc7d838d294647aa"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}